fix: slide alignements

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -159,11 +159,11 @@ h6 {
   }
 
   .slide-blank {
-    padding: 2rem 2rem;
+    padding: 3rem 3rem;
   }
   .slide-heading-content {
     gap: 1.5rem;
-    padding: 2rem 2rem;
+    padding: 3rem 3rem;
   }
   .slide_display {
     height: 88vh;
